# LambdaCalc

./: .gitignore  CHANGELOG.md  README.md  envlambda.hs  lambdacalc.cabal  lambdacalc.hs  test.lambda
app/: Main.hs  lambdacalc.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
newdist/dante/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan
