cabal-version:      2.4
name:               lambdacalc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Zack Carnet
maintainer:         zackcarnet1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable lambdacalc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Lambdacalc

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
                      containers >= 0.6.4.1,
                      megaparsec >= 9.1.0,
                      mtl >= 2.2.2,
                      optparse-applicative >= 0.16.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
